traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:11: error: Boolean does not take parameters
      (getX() == getMondeLargeur()-1) {
                                      ^